--- a/index.html
+++ b/index.html
@@ -4,9 +4,49 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>JQuery Change Cursor</title>
+    <link rel="shortcut icon" href="img/icon/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <button type="button" id="cur-alias">alias</button>
+        <button type="button" id="cur-all-scroll">all-scroll</button>
+        <button type="button" id="cur-auto">auto</button>
+        <button type="button" id="cur-cell">cell</button>
+        <button type="button" id="cur-col-resize">col-resize</button>
+        <button type="button" id="cur-context-menu">context-menu</button>
+        <button type="button" id="cur-copy">copy</button>
+        <button type="button" id="cur-crosshair">crosshair</button>
+        <button type="button" id="cur-default">default</button>
+        <button type="button" id="cur-e-resize">e-resize</button>
+        <button type="button" id="cur-ew-resize">ew-resize</button>
+        <button type="button" id="cur-grab">grab</button>
+        <button type="button" id="cur-grabbing">grabbing</button>
+        <button type="button" id="cur-help">help</button>
+        <button type="button" id="cur-move">move</button>
+        <button type="button" id="cur-n-resize">n-resize</button>
+        <button type="button" id="cur-ne-resize">ne-resize</button>
+        <button type="button" id="cur-nesw-resize">nesw-resize</button>
+        <button type="button" id="cur-ns-resize">ns-resize</button>
+        <button type="button" id="cur-nw-resize">nw-resize</button>
+        <button type="button" id="cur-nwse-resize">nwse-resize</button>
+        <button type="button" id="cur-no-drop">no-drop</button>
+        <button type="button" id="cur-none">none</button>
+        <button type="button" id="cur-not-allowed">not-allowed</button>
+        <button type="button" id="cur-pointer">pointer</button>
+        <button type="button" id="cur-progress">progress</button>
+        <button type="button" id="cur-row-resize">row-resize</button>
+        <button type="button" id="cur-s-resize">s-resize</button>
+        <button type="button" id="cur-se-resize">se-resize</button>
+        <button type="button" id="cur-sw-resize">sw-resize</button>
+        <button type="button" id="cur-text">text</button>
+        <button type="button" id="cur-w-resize">w-resize</button>
+        <button type="button" id="cur-wait">wait</button>
+        <button type="button" id="cur-zoom-in">zoom-in</button>
+        <button type="button" id="cur-zoom-out">zoom-out</button>
+    </div>
+    <script src="script/jquery-3.6.3.min.js"></script>
+    <script src="script/script.js"></script>
 </body>
 </html>
